--- a/crm/package.json
+++ b/crm/package.json
@@ -7,11 +7,8 @@
         "preview": "vite preview --port 5173"
     },
     "devDependencies": {
-        "@inertiajs/vue3": "^2.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^5.0.0",
-        "@vueuse/core": "^13.9.0",
-        "@vueuse/head": "^2.0.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.12.2",
         "concurrently": "^9.2.1",
@@ -23,20 +20,11 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.1.5",
-        "@radix-ui/react-checkbox": "^1.3.3",
-        "@radix-ui/react-select": "^2.2.6",
-        "@radix-ui/react-slot": "^1.2.3",
-        "@vee-validate/zod": "^4.15.1",
-        "chokidar": "^4.0.3",
         "lucide-vue-next": "^0.544.0",
-        "maska": "^3.2.0",
         "primeicons": "^7.0.0",
         "primevue": "^4.3.9",
         "sonner": "^2.0.7",
         "tailwindcss-animate": "^1.0.7",
-        "vee-validate": "^4.15.1",
-        "vue": "^3.5.21",
-        "vue-toastification": "^2.0.0-rc.5",
-        "zod": "^3.25.76"
+        "vue": "^3.5.21"
     }
 }
